<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui_profile.ProfileActivity"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.firstproject.ui_profile.custom.AspectRatioImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/mountains"
            app:aspectRatio="3" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
            <ImageButton
                android:layout_width="@dimen/btn_round_size_40"
                android:layout_height="@dimen/btn_round_size_40"
                android:background="@drawable/btn_round_bg"
                android:src="@drawable/ic_brightness_high_24"
                android:layout_toLeftOf="@+id/iv_avatar"
                android:layout_marginRight="@dimen/spacing_huge_32"
                android:layout_marginTop="36dp"/>
            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="@dimen/avatar_round_size"
                android:layout_height="@dimen/avatar_round_size"
                android:src="@drawable/avatar_default"
                android:layout_centerHorizontal="true"/>
            <ImageButton
                android:layout_width="@dimen/btn_round_size_40"
                android:layout_height="@dimen/btn_round_size_40"
                android:background="@drawable/btn_round_bg"
                android:src="@drawable/ic_edit_24"
                android:layout_toRightOf="@+id/iv_avatar"
                android:layout_marginLeft="@dimen/spacing_huge_32"
                android:layout_marginTop="36dp"
                />
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_avatar"
                android:text="Kelly Jons"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-medium"
                android:layout_marginTop="@dimen/spacing_normal_16"
                android:textSize="@dimen/spacing_large_24"/>
            <TextView
                android:id="@+id/tv_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_name"
                android:text="Junior Android Developer"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/spacing_normal_16"
                android:textSize="@dimen/spacing_normal_16"/>
        </RelativeLayout>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/color_primary_light">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="@dimen/spacing_normal_16"
            android:paddingBottom="@dimen/spacing_normal_16">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large_24"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"
                android:text="0"
                android:drawableLeft="@drawable/ic_grade_24"
                android:drawablePadding="@dimen/spacing_tiny_4"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/font_normal_16"
                android:text="Рейтинг"/>
        </LinearLayout>
        <View android:layout_width="1dp"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:layout_marginBottom="@dimen/spacing_normal_16"
            android:layout_height="match_parent"
            android:background="@color/color_divider_light">
            </View>
<LinearLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingTop="@dimen/spacing_normal_16"
    android:paddingBottom="@dimen/spacing_normal_16">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_large_24"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"
        android:text="0"
        android:drawableLeft="@drawable/ic_rate_24"
        android:drawablePadding="@dimen/spacing_tiny_4"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/font_normal_16"
        android:text="Уважение"/>
</LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_normal_16">

        <ImageView
            android:id="@+id/ic_avatar"
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40"
            android:src="@drawable/ic_avatar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/w_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_normal_16"
            android:layout_toRightOf="@+id/ic_avatar">

            <EditText
                style="@style/Profile.EditText.Single"
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_hint_first_name"
                tools:text="Kelly"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/w_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/w_first_name"
        android:layout_marginLeft="@dimen/spacing_normal_16"
        android:layout_toRightOf="@+id/ic_avatar"
        >

        <EditText
            style="@style/Profile.EditText.Single"
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_hint_last_name"
            tools:text="Jons"/>
    </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_marginLeft="@dimen/space_maximum_56"
            android:id="@+id/divider_1"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:layout_marginBottom="@dimen/spacing_normal_16"
            android:layout_height="1dp"
            android:background="@color/color_accent"
            android:layout_below="@+id/w_last_name">
        </View>

        <LinearLayout
            android:id="@+id/ui_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider_1"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="@dimen/btn_round_size_40"
                android:layout_height="@dimen/btn_round_size_40"
                android:src="@drawable/ic_about" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_normal_16"
                android:layout_toRightOf="@+id/ic_about">

                <EditText
                    style="@style/Profile.EditText.Multiline"
                    android:id="@+id/et_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_hint_about"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <View
            android:layout_marginLeft="@dimen/space_maximum_56"
            android:id="@+id/divider_2"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:layout_marginBottom="@dimen/spacing_normal_16"
            android:layout_height="1dp"
            android:background="@color/color_accent"
            android:layout_below="@+id/ui_about">
        </View>
        <LinearLayout
            android:id="@+id/ui_repos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider_2"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ic_repoc"
                android:layout_width="@dimen/btn_round_size_40"
                android:layout_height="@dimen/btn_round_size_40"
                android:src="@drawable/ic_repoc" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_normal_16"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:layout_toRightOf="@+id/ic_repoc">

                <EditText
                    style="@style/Profile.EditText.Single"
                    android:id="@+id/et_repos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_hint_repository" />
            </com.google.android.material.textfield.TextInputLayout>
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_eye"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>
        <View
            android:layout_marginLeft="@dimen/space_maximum_56"
            android:id="@+id/divider_3"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:layout_marginBottom="@dimen/spacing_normal_16"
            android:layout_height="1dp"
            android:background="@color/color_accent"
            android:layout_below="@+id/ui_repos">
        </View>
    </RelativeLayout>
</LinearLayout>